# gurgelhub

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  railway.toml
app/: config.py  database.py  main.py
app/api/v1/: dependencies.py
app/api/v1/routes/: admin.py  articles.py  auth.py  comments.py  search.py
app/core/: security.py
app/models/: article.py  comment.py  user.py
app/schemas/: article.py  comment.py  search.py
app/services/: article.py  auth.py  comment.py  search.py
app/templates/: about.html  article.html  base.html  index.html  search.html
app/templates/admin/: dashboard.html  edit.html  login.html
app/templates/partials/: search_results.html
app/web/: admin_routes.py  routes.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 001_initial.py  002_add_comments.py
scripts/: create_admin.py  generate_admin_hash.py  reproduce_url_error.py  verify_db_url.py  verify_fix.py
static/css/: comments.css  main.css  syntax.css
static/js/: comments.js  main.js
tests/: conftest.py  test_articles.py  test_search.py
